# pydantic-geojson

./: .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: codecov.yml  main.yml  publish.yml  python-package.yml
pydantic_geojson/: __init__.py  _base.py  feature.py  feature_collection.py  geometry_collection.py  line_string.py  multi_line_string.py  multi_point.py  multi_polygon.py  object_type.py  point.py  polygon.py
tests/: conftest.py  test_bbox_validation.py  test_coordinates.py  test_feature.py  test_feature_collection.py  test_feature_on_lat_lon_limit.py  test_geometry_collection.py  test_line_string.py  test_multi_line_string.py  test_multi_point.py  test_multi_polygon.py  test_object_type.py  test_point.py  test_polygon.py  test_type_mixing_validation.py  test_utils.py
