[tool.poetry]
name = "pydantic_geojson"
version = "0.0.3"
description = "Pydantic validation for GeoJson"
authors = [
  "Aliaksandr Vaskevich <vaskevic.an@gmail.com>",
]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/gb-libs/pydantic-geojson"
repository = "https://github.com/gb-libs/pydantic-geojson"
documentation = "https://github.com/gb-libs/pydantic-geojson"

keywords = [
  "pydantic",
  "validation",
  "geojson",
  "schema",
  "gis",
  "geo",
  "json",
  "json-schema",
  "rest",
  "fastapi",
  "swagger",
  "openapi"
]

classifiers = [
  "Topic :: Scientific/Engineering :: GIS",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
pytest = "^7.1.1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "hug"
src_paths = ["isort", "tests"]
