[tool.poetry]
name = "pydantic_geojson"
version = "0.2.0"
description = "Pydantic validation for GeoJson"
authors = [
  "Aliaksandr Vaskevich <vaskevic.an@gmail.com>",
]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/gb-libs/pydantic-geojson"
repository = "https://github.com/gb-libs/pydantic-geojson"
documentation = "https://github.com/gb-libs/pydantic-geojson"

keywords = [
  "pydantic",
  "validation",
  "geojson",
  "schema",
  "gis",
  "geo",
  "json",
  "json-schema",
  "rest",
  "fastapi",
  "swagger",
  "openapi"
]

classifiers = [
  "Topic :: Scientific/Engineering :: GIS",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = ">=1.9,<3.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
isort = "^5.13.2"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
mypy = "^1.13.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "hug"
src_paths = ["isort", "tests"]
